--- a/Mario's_Game/index.html
+++ b/Mario's_Game/index.html
@@ -15,7 +15,7 @@
         <button class="resetButton" onclick="resetAll()"> Reset</button>
 
         <div class="telaInicio">
-            <img src="img/Mario-gif.gif">
+            <img src="./IMG/Mario-gif.gif">
             <div>
                 <h1>Welcome!!!</h1>
                 <div>
@@ -33,13 +33,13 @@
         </div>
 
         <div class="theGame">
-            <img src="img/you-win.gif" class="winner">
-            <img src="img/you-lose.gif" class="loser">
+            <img src="./IMG/you-win.gif" class="winner">
+            <img src="./IMG/you-lose.gif" class="loser">
 
             <div class="scoreBox">
                 <p>Pontos: <span id="score">0</span></p>
                 <div class="marioUser">
-                    <img src="img/super-mario-png4.webp" class="imgMarioUser">
+                    <img src="./IMG/super-mario-png4.webp" class="imgMarioUser">
                     <p id="userName">User</p>
                 </div>
             </div>
